--- a/2-html-css-js/2-css-basic/2-lists/lists.html
+++ b/2-html-css-js/2-css-basic/2-lists/lists.html
@@ -41,10 +41,10 @@
 
 
 <!--
-    Crie uma lista não ordenada (<ul>) com 5 itnes de sua escolha.
+    Crie uma lista não ordenada (<ul>) com 5 itens de sua escolha.
     Use CSS para:
     
-    Alterar a cor do text odos itens para azul.
+    Alterar a cor do texto dos itens para azul.
     Mudar a cor de fundo dos itens para cinza claro.
     Aplicar uma borda arredondada de 5px em cada item.
     Quando o usuário passar o mouse sobre um item (:hover), mude a cor de fundo para um tom mais escuro de cinza e
