--- a/3-css-intermediate/3-flexbox/menu-vertical.html
+++ b/3-css-intermediate/3-flexbox/menu-vertical.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu Horizontal</title>
+    <title>Navegação Vertical</title>
     <link rel="stylesheet" href="menu.css">
 </head>
 <body>
-    <nav class="navegacao-horizontal">
+    <nav class="navegacao-vertical">
         <ul>
             <li><a href="#">Início</a></li>
             <li><a href="#">Serviços</a></li>
-            <li><a href="#">Portfólio</a></li>
+            <li><a href="#">Portfólios</a></li>
             <li><a href="#">Contato</a></li>
         </ul>
-    </nav>    
+    </nav>
 </body>
 </html>
