--- a/4-js-basic/atividade05/ToDoApp/index.html
+++ b/4-js-basic/atividade05/ToDoApp/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To do App</title>
     <!-- Adiciona o tailwind CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">    
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="shortcut icon" href="assets/images/icon.png" type="image/x-icon">    
 </head>
 <body class="bg-gradient-to-br from-blue-900 via-purple-900 to-purple-700 flex items-center justify-center min-h-screen">
     <div class="bg-white rounded-lg shadow-lg container mb-auto mt-40 p-6 pb-20 max-w-xl">
