--- a/2-html-css-js/6-landing-page/index.html
+++ b/2-html-css-js/6-landing-page/index.html
@@ -27,7 +27,7 @@
             </ul>
         </nav>
         
-        <div>            
+        <div>               
             <button>Login</button>
         </div>
 
@@ -66,7 +66,7 @@
                         <h1>Mario</h1>
                     </div>
                     <img src="images/mario.png" alt="Mario">
-                    <div class="right">
+                            <div class="right">
                         <ul class="description">
                             <li>
                                 <p>27 de Outubro de 2017</p>
@@ -88,6 +88,46 @@
 
                 <div class="backscene"></div>
                 <div class="banner"></div>
+                <div class="left">
+                    <div class="features">
+                        <div class="rating">
+                            <span  class="score">8.3</span>
+                            <div class="content">
+                                <span class="subtitle">M E T A S C O  R E</span>
+                                <h4>Bom</h4>
+                                <span>
+                                    Prepare-se para uma aventura Pokemon!
+                                </span>
+                            </div>
+                        </div>
+                        <div class="pricing">
+                            <a href="" target="_blank"></a>
+                            <div class="content">
+                                <span class="subtitle">Pokemon Legends</span>
+                                <h4>COMPRE AGORA</h4>
+                                <span>Ação, RPG</span>
+                            </div>
+                        </div>
+                    </div>
+                    <h1 class="pokemon-title">Pokemon</h1>
+                </div>
+                <img src="images/red.png" alt="Treinador Pokemon Red" class="pokemon">
+                <div class="right">
+                    <ul class="description">
+                        <li>
+                            Data de Lançamento
+                            <p>28 de Janeiro</p>
+                        </li>
+                        <li>
+                            <h4>Modos de jogo</h4>
+                            <p>Modo TV, Modo Semiportátil, Portátil</p>
+                        </li>
+                    </ul>
+                    <div class="trailer">
+                        <h2>Assista ao Trailer</h2>
+                        <iframe src="" frameborder="0"></iframe>
+                    </div>
+                </div>
             </div>
 
             <div class="swiper-slide" id="slide-3">
@@ -96,9 +136,11 @@
                 <div class="backscene"></div>
                 <div class="banner"></div>
             </div>
+            <div class="swiper-button-prev"></div>    
+            <div class="swiper-button-next"></div>    
         </div>
     </div>
-    
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
