--- a/2-html-css-js/6-landing-page/index.html
+++ b/2-html-css-js/6-landing-page/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <title>Gaming Website Landing Page</title>
 </head>
 <body>
@@ -29,12 +28,12 @@
         
         <div>               
             <button>Login</button>
+            <input type="text" name="" id="">
         </div>
 
         <div class="search">
             <input type="text" id="gameInput" placeholder="Search">
-        </div>
-                
+        </div>                
     </header>
 
     <div class="swiper">
@@ -66,19 +65,21 @@
                         <h1>Mario</h1>
                     </div>
                     <img src="images/mario.png" alt="Mario">
-                            <div class="right">
+                    <div class="right">
                         <ul class="description">
                             <li>
+                                <h4>Data de Lançamento</h4>
                                 <p>27 de Outubro de 2017</p>
                             </li>
                             <li>
+                                <h4>Modos de Jogo</h4>
                                 <p>Modo TV, Modo Semiportátil, Modo Portátil</p>
                             </li>
                         </ul>
 
                         <div class="trailer">
                             <h2>Assista ao Trailer</h2>
-                            <iframe width="1280" height="720" src="https://www.youtube.com/embed/5kcdRBHM7kM" allowfullscreen></iframe>
+                            <iframe width="1280" height="720" src="https://www.youtube.com/embed/5kcdRBHM7kM" title="Super Mario Odyssey Trailer" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
@@ -87,57 +88,105 @@
                 <img src="images/pokemon-legends-arceus.jpeg" alt="Banner do Pokemon Legends Arceus">
 
                 <div class="backscene"></div>
-                <div class="banner"></div>
-                <div class="left">
-                    <div class="features">
-                        <div class="rating">
-                            <span  class="score">8.3</span>
-                            <div class="content">
-                                <span class="subtitle">M E T A S C O  R E</span>
-                                <h4>Bom</h4>
-                                <span>
-                                    Prepare-se para uma aventura Pokemon!
-                                </span>
+                <div class="banner">
+                    <div class="left">
+                        <div class="features">
+                            <div class="rating">
+                                <span  class="score">8.3</span>
+                                <div class="content">
+                                    <span class="subtitle">M E T A S C O  R E</span>
+                                    <h4>Bom</h4>
+                                    <span>Prepare-se para uma aventura Pokémon!</span>
+                                </div>
+                            </div>
+                            <div class="pricing">
+                                <a href="" target="_blank"></a>
+                                <div class="content">
+                                    <span class="subtitle">Pokémon Legends</span>
+                                    <h4>COMPRE AGORA</h4>
+                                    <span>Ação, RPG</span>
+                                </div>
                             </div>
                         </div>
-                        <div class="pricing">
-                            <a href="" target="_blank"></a>
-                            <div class="content">
-                                <span class="subtitle">Pokemon Legends</span>
-                                <h4>COMPRE AGORA</h4>
-                                <span>Ação, RPG</span>
-                            </div>
-                        </div>
+                        <h1>Pokémon</h1>                    
                     </div>
-                    <h1 class="pokemon-title">Pokemon</h1>
-                </div>
-                <img src="images/red.png" alt="Treinador Pokemon Red" class="pokemon">
-                <div class="right">
-                    <ul class="description">
-                        <li>
-                            Data de Lançamento
-                            <p>28 de Janeiro</p>
-                        </li>
-                        <li>
-                            <h4>Modos de jogo</h4>
-                            <p>Modo TV, Modo Semiportátil, Portátil</p>
-                        </li>
-                    </ul>
-                    <div class="trailer">
-                        <h2>Assista ao Trailer</h2>
-                        <iframe src="" frameborder="0"></iframe>
+                    <img src="images/red.png" alt="Treinador Pokemon Red" class="pokemon">
+                    <div class="right">                
+                        <ul class="description">
+                            <li>
+                                <h4>Data de Lançamento</h4>
+                                <p>28 de Janeiro de 2022</p>
+                            </li>
+                            <li>
+                                <h4>Modos de jogo</h4>
+                                <p>Modo TV, Modo Semiportátil, Portátil</p>
+                            </li>
+                        </ul>
+
+                        <div class="trailer">
+                            <h2>Assista ao Trailer</h2>
+                            <iframe width="1280" height="720" src="https://www.youtube.com/embed/wOEHUANP-vo?si=JgqPb7KmSHNeHKsD" title="Pokémon Legends: Arceus Trailer" allowfullscreen></iframe>
+                        </div>
                     </div>
                 </div>
             </div>
-
             <div class="swiper-slide" id="slide-3">
                 <img src="images/The-Legend-of-Zelda-Breath-of-the-Wild.jpeg" alt="Banner The legend of Zelda Breath of the Wild">
 
                 <div class="backscene"></div>
-                <div class="banner"></div>
-            </div>
-            <div class="swiper-button-prev"></div>    
-            <div class="swiper-button-next"></div>    
+                <div class="banner">
+                    <div class="left">
+                        <div class="features">
+                            <div class="rating">
+                                <div class="score">9.7</div>
+                                <div class="content">
+                                    <span class="subtitle">M E T A S C O R E</span>
+                                    <h4>Excelente</h4>
+                                    <span>
+                                        Descrição do jogo Zelda
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="pricing">
+                                <a href="" target="_blank"></a>
+                                <div class="content">
+                                    <span class="subtitle">The Legend of Zelda Breath of the Wild</span>
+                                    <h4>COMPRE AGORA</h4>
+                                    <span>Aventura, Ação, RPG</span>
+                                </div>
+                            </div>                            
+                        </div>
+                        <h1>Zelda</h1>
+                    </div>
+                    <img src="images/link.png" alt="Personagem Link">
+                    <div class="right">
+                        <ul class="description">                            
+                            <li>
+                                <h4>Data de Lançamento</h4>
+                                <p>3 de Março de 2017</p>
+                            </li>
+                            <li>
+                                <h4>Modos de Jogo</h4>
+                                <p>Modo TV, Modo Semiportátil, Portátil</p>
+                            </li>
+                        </ul>
+
+                        <div class="trailer">
+                            <h2>Assista ao Trailer</h2>
+                            <iframe width="1280" height="720" src="https://www.youtube.com/embed/zw47_q9wbBE?si=FA-tH2Fsh8iE7M91" title="The legend of Zelda: Breath of the Wild Trailer" allowfullscreen></iframe>                        
+                        </div>
+                    </div>
+                </div>
+            </div>        
+        </div>
+        <div class="swiper-button-prev"></div>    
+        <div class="swiper-button-next"></div>    
+    </div>
+
+    <div  id="emailModal" class="modal">
+        <div class="conteudo">
+            Formulário de contato por email
+            <input type="text">Nome
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
